--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "JC Arjun",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0"
